# jesses-vengeance

./: .gitignore  README.md  biome.json  build.ts  flake.nix  index.html  index.ts  main.py  module.nix  overrides.nix  package.json  package.nix  pnpm-lock.yaml  pylintrc  pyproject.toml  responses.json  types.d.ts
commands/: bitch.py  furry.py
patches/: giget@2.0.0.patch
src/: autoresponder.ts  commands.ts  config.ts  currency.ts  index.ts  quote.ts  responses.json  shop.ts
src/bitchbot/: __init__.py  responses.json
src/bitchbot/commands/: __init__.py  bitch.py  furry.py
src/classes/: arguments.ts  event.ts  user.ts
src/commands/: attack.ts  balance.ts  bank-balance.ts  bank-deposit.ts  bank-interest.ts  bank-withdraw.ts  buy.ts  give.ts  help.ts  items.ts  leaderboard.ts  mog.ts  ping.ts  quote.ts  rockpaperscissors.ts  roulette.ts  sell.ts  shop.ts  steal.ts  stocks-buy.ts  stocks-list.ts  stocks-sell.ts  stocks-view.ts  sussex.ts  work.ts
src/util/: dad.ts  event-manager.ts  event.ts  finance-svg.ts  finance.ts  html-parser.ts  math.ts
tests/: arguments.test.ts  command-parsing.test.ts  html-parser.test.ts  mocks.ts
web/: App.vue  index.css
web/components/: Chart.vue  StatCard.vue
